# csd-mirror

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.TXT  README.rst
cmake/: FindSphinx.cmake
doc/: CMakeLists.txt
doc/doxygen/: Doxyfile.in
doc/sphinx/: conf.py.in  lists-queue-and-stl.rst
include/bds/: assert.h  intrusive.h  list.h  list_common.h  listfwd.h  slist.h  stailq.h  tailq.h  utility.h
include/csd/: assert.h  intrusive.h  list.h  listfwd.h  slist.h  stailq.h  tailq.h  utility.h
include/csg/core/: assert.h  intrusive.h  list.h  listfwd.h  slist.h  stailq.h  tailq.h  utility.h
test/: CMakeLists.txt  driver.cpp  list_modifier_tests.h  list_operation_tests.h  list_test_util.h  lists_codegen.cpp  slist_tests.cpp  stailq_tests.cpp  tailq_tests.cpp  utility_tests.cpp
test/codegen_results/: lists_invoke_clang13_skylake.s  lists_invoke_gcc11_skylake.s  lists_offset_clang13_skylake.s  lists_offset_gcc11_skylake.s
utils/gdb-printers/: csd.py
